--- a/AgendaMedica/Views/Agendas/Details.cshtml
+++ b/AgendaMedica/Views/Agendas/Details.cshtml
@@ -10,28 +10,28 @@
     <h4>Agenda</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Paciente)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Paciente.PacienteId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Paciente.Nome)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Medico)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Medico.MedicoId)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Medico.Nome)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DataConsulta)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DataConsulta)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Status)
         </dd>
     </dl>
