--- a/AgendaMedica/Views/Agendas/Index.cshtml
+++ b/AgendaMedica/Views/Agendas/Index.cshtml
@@ -28,26 +28,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Paciente.PacienteId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Medico.MedicoId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataConsulta)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.AgendaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AgendaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AgendaId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Paciente.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Medico.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataConsulta)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.AgendaId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.AgendaId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.AgendaId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
